Fixed spacing in about me

--- a/css/about.css
+++ b/css/about.css
@@ -39,46 +39,49 @@ h3{
 .about-layout{
     max-width: 90%;
     margin: 0 auto;
-    padding-top: 100px; 
+    padding-top: 140px; 
     padding-left: 40px;
     padding-right: 40px;
 }
 
+#about-me{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    gap: 40px;
+    align-items: start;
+
+}
+
+#profile,
+#left{
+    height: 90%;
+    display:flex;
+}
 
 .panel{
     background: rgba(10, 0, 30, 0.6);
     border: 1px solid var(--aqua-trans);
     border-radius: 10px;
-    padding: 20px;
-
+    padding: 10px;
+    height: auto;
     box-shadow:
     0 0 10px var(--aqua-trans),
     inset 0 0 10px rgba(0,0,0,0.5);
     backdrop-filter: blur(6px);
 }
 
-#about-me{
-    min-height: 420px;
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    gap: 40px;
-    align-items: stretch;
-    margin-bottom: 20px;
-}
-
-#profile,
-#left{
-    height:100%;
-    display:flex;
+.intro{
+    padding: 20px 50px;
 }
 
 #portrait,
 #container-music{
+    max-width: 250px;
     width:100%;
+    margin: 0 auto;
     height:auto;
     backdrop-filter: blur(12px);
     border: 1px solid var(--aqua);
-    border-radius: 20px;
     box-shadow: 0 0 20px var(--aqua-light);
     border-radius: 10px;
     overflow: hidden;
@@ -95,12 +98,6 @@ h3{
     width:100%;
     height:100%;
     object-fit:cover;
-}
-
-#img-self-portrait{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 #container-music{
@@ -125,20 +122,21 @@ h3{
     flex-direction:column;
     justify-content:center;
     align-items:center;
-    gap:15px;
-    padding:20px;
+    gap:10px;
+    padding:10px;
 }
 
 #song-image{
-    width: 70%;
-    object-fit: contain;
+    width: 85%;
+    object-fit: cover;
+    object-position: center;
     border: 1px solid var(--sun-pink);
     border-radius: 10px;
     overflow: hidden;
 }
 
 #song-name{
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: var(--sun-pink);
 
     text-shadow:
@@ -238,7 +236,7 @@ h3{
 }
 
 .job-title{
-    font-style: bold;
+    font-weight: bold;
     color: var(--aqua-light);
     margin-bottom: 10px;
 }
